[workspace]
members = [
    "aderyn",
    "aderyn_core",
    "aderyn_driver",
]

resolver="1"

exclude = [
    "bot_ci_cd",
    "foundry",
]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
