[workspace]
resolver="2"

members = [
    "aderyn",
    "aderyn_core",
    "aderyn_driver",
    "tools/*",
]

[workspace.dependencies]
aderyn_core = { version = "0.5.13", path = "aderyn_core" }
aderyn_driver = { version = "0.5.13", path = "aderyn_driver" }
indoc = "2"
clap = "4.4.6"
criterion = "0.5.1"
derive_more = "2"
eyre = "0.6.12"
field_access = "0.1.8"
ignore = "0.4.21"
lazy-regex = "3.2.0"
log = "0.4.22"
notify-debouncer-full = "0.3.1"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.19.0"
phf = "0.11.2"
prettytable = "0.10.0"
rayon = "1.8.0"
reqwest = { version = "0.12.2", default-features = false }
semver = "1.0.26"
serde = "1.0.160"
serde-sarif = "0.4.2"
serde_json = "1.0.96"
serde_repr = "0.1.12"
serial_test = "3.0.0"
strum = "0.26"
termcolor = "1.4.1"
tokio = "1.40.0"
toml = "0.8.13"
tower-lsp = "0.20.0"
dunce = "=1.0.5"
petgraph = "0"
crossbeam-channel = "0.5.15"
webbrowser = "1.0.4"
urlencoding = "2.1.3"

# Uncomment in Production (just before merging to dev)
# Cyfrin managed github repository
solidity_ast = { git = "https://github.com/Cyfrin/solidity-ast-rs", tag = "v0.0.1-alpha.beta.5", package = "solidity-ast" }

# Uncomment when debugging in branch (PR)
# solidity_ast = { git = "https://github.com/Cyfrin/solidity-ast-rs", branch = "main", package = "solidity-ast" }

# Uncomment when debuggin locally
# solidity_ast = { path = "../solidity-ast-rs", package = "solidity-ast"}

[profile.release]
codegen-units = 1
lto = true

[profile.lspdev]
inherits = "dist"

[profile.lspdev.package."*"]
inherits = "dist"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
