[package]
name = "aderyn"
version = "0.5.5"
edition = "2021"
authors = ["Cyfrin <aderyn@cyfrin.io>"]
description = "Rust based Solidity AST analyzer"
license = "MIT"
default-run = "aderyn"
repository = "https://github.com/cyfrin/aderyn"
homepage = "https://github.com/cyfrin/aderyn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_driver = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
strum = { workspace = true, features = ["derive"] }
notify-debouncer-full = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
