[package]
name = "aderyn"
version = "0.6.1"
edition = "2021"
authors = ["Cyfrin <aderyn@cyfrin.io>"]
description = "Rust based Solidity AST analyzer"
license = "MIT"
default-run = "aderyn"
repository = "https://github.com/cyfrin/aderyn"
homepage = "https://github.com/cyfrin/aderyn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = { workspace = true }
webbrowser = { workspace = true }
indoc = { workspace = true }
aderyn_driver = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
strum = { workspace = true, features = ["derive"] }
notify-debouncer-full = { workspace = true }
crossbeam-channel = { workspace = true}
termcolor = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
log = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
clap_complete = { workspace = true }

[lints]
workspace = true
