[package]
name = "aderyn"
version = "0.6.3"
edition = { workspace = true }
default-run = "aderyn"
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = { workspace = true }
webbrowser = { workspace = true }
indoc = { workspace = true }
aderyn_driver = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
strum = { workspace = true, features = ["derive"] }
notify-debouncer-full = { workspace = true }
crossbeam-channel = { workspace = true}
termcolor = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
log = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
clap_complete = { workspace = true }
simplelog = "0"

[lints]
workspace = true
