[package]
name = "aderyn_core"
version = "0.5.13"
edition = "2021"
authors = ["Cyfrin <aderyn@cyfrin.io>"]
description = "Rust based Solidity AST analyzer backend"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
ignore = { workspace = true }
phf = { workspace = true, features = ["macros"] }
prettytable = { workspace = true }
rayon = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr = { workspace = true }
strum = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
lazy-regex = { workspace = true }
derive_more = { workspace = true }
dunce = { workspace = true }
solidity_ast = { workspace = true }

[dev-dependencies]
petgraph = { workspace = true }
serial_test = { workspace = true }
once_cell = { workspace = true }

[lib]
doctest = false
