[package]
name = "aderyn_driver"
version = "0.5.13"
edition = "2021"
authors = ["Cyfrin <aderyn@cyfrin.io>"]
description = "Rust based Solidity AST analyzer driver"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_core = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
serde-sarif = { workspace = true }
toml = { workspace = true }
field_access = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
dunce = { workspace = true }
prettytable = { workspace = true }
solidity_ast = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "detectors"
harness = false
