[package]
name = "aderyn_driver"
version = "0.6.1"
edition = { workspace = true }
authors = ["Cyfrin <aderyn@cyfrin.io>"]
description = "Rust based Solidity AST analyzer driver"
license = "MIT"
repository = "https://github.com/cyfrin/aderyn"
homepage = "https://github.com/cyfrin/aderyn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_core = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
serde-sarif = { workspace = true }
toml = { workspace = true }
field_access = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
dunce = { workspace = true }
prettytable = { workspace = true }
solidity_ast = { workspace = true }
rmcp = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "detectors"
harness = false
