[package]
name = "aderyn_evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_driver = { path = "../aderyn_driver" }
async-openai = "0.18.1"
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
serde_json = "1.0.108"

