[package]
name = "aderyn_nodejs"
version = "0.0.16"
description = "Node JS Bindings for Aderyn"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_driver = { path = "../aderyn_driver", version = "0.0.16"}

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
