[package]
name = "aderyn_nodejs"
version = "0.0.17"
description = "Node JS Bindings for Aderyn"
authors = ["Alex Roan <alex@cyfrin.io>", "Tilak Madichetti <tilak.madichetti@gmail.com>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_driver = { path = "../aderyn_driver", version = "0.0.17"}

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
