[package]
name = "bot_example"
version = "0.0.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_driver = { path  = "../aderyn_driver", version = "0.0.20" }
clap = { version = "4.4.6", features = ["derive"] }

