[package]
name = "judgeops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aderyn_core = { path = "../aderyn_core", version = "0.0.12" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
clap = { version = "4.4.6", features = ["derive"] }