[package]
name = "judgeops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
clap = { version = "4.4.6", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
serial_test = "3.0.0"
