[package]
name = "nyth"
version = "0.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
handlebars = "5.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
zip-extract = "0.1.2"