[package]
name = "nyth"
version = "0.0.20"
edition = "2021"
authors = ["Alex Roan <alex@cyfrin.io>"]
description = "Rust based Solidity AST analyzer - Aderyn development framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
handlebars = "5.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
zip-extract = "0.1.2"